--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CycleBoston: Bikewatching Visualization</title>
+    <title>CycleBoston</title>
+    <h1>CycleBoston: Bikewatching Visualization</h1>
 </head>
 <body>
     <p>This is the body text.</p>
 </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CycleBoston</title>
+  </head>
+  <body>
+    <h1>🚴🏼‍♀️ CycleBoston</h1>
+  </body>
 </html>
