--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CycleBoston</title>
-    <h1>CycleBoston: Bikewatching Visualization</h1>
-</head>
-<body>
-    <p>This is the body text.</p>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CycleBoston</title>
+    <link rel="stylesheet" href="global.css" />
+    <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
   </head>
   <body>
     <h1>🚴🏼‍♀️ CycleBoston</h1>
