fin step 3 (not perf)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CycleBoston</title>
     <link rel="stylesheet" href="global.css" />
+    <link rel="stylesheet" href="map.css" />
     <link rel="icon" href="assets/favicon.svg" type="image/svg+xml" />
+
+    <link
+    href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css"
+    rel="stylesheet"
+    />
+
+    <script src="map.js" type="module"></script>
   </head>
   <body>
     <h1>🚴🏼‍♀️ CycleBoston</h1>
+
+    <div id="map">
+        <svg></svg>
+    </div>
   </body>
 </html>
