--- a/index.html
+++ b/index.html
@@ -16,10 +16,29 @@
     <script src="map.js" type="module"></script>
   </head>
   <body>
-    <h1>🚴🏼‍♀️ CycleBoston</h1>
+    <header>
+      <div class="header-left">
+        <h1>🚴🏼‍♀️ CycleBoston</h1>
+      </div>
+      <div class="header-right">
+        <label>
+          Filter by time:
+          <input id="time-slider" type="range" min="-1" max="1440" value="-1" />
+          <time id="selected-time" style="display: block;">--:--</time>
+          <em id="any-time" style="display: block;">(any time)</em>
+        </label>
+      </div>      
+    </header>
+             
 
     <div id="map">
         <svg></svg>
+    </div>
+
+    <div class="legend">
+      <div style="--departure-ratio: 1">More departures</div>
+      <div style="--departure-ratio: 0.5">Balanced</div>
+      <div style="--departure-ratio: 0">More arrivals</div>
     </div>
   </body>
 </html>
